[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/pause/Pause.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.67017
margin_right = 1.67017
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 608.0
margin_top = 300.0
margin_right = 608.0
margin_bottom = 300.0

[node name="UnpauseButton" type="Button" parent="CenterContainer/Control"]
visible = false
margin_left = -121.67
margin_top = -4.0
margin_right = -18.6702
margin_bottom = 46.0
text = "UNPAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectButton" type="Button" parent="CenterContainer/Control"]
visible = false
margin_left = 14.3298
margin_top = -4.0
margin_right = 117.33
margin_bottom = 46.0
text = "LEVEL SELECT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/Control/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="CenterContainer/Control/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
